@@ -7,6 +7,7 @@ where = test
 cover-package = ibm_db
 with-coverage = 1
 cover-erase = 1
+verbosity = 1
 
 [sqla_testing]
 requirement_cls=ibm_db_sa.requirements:Requirements
